# optuna-batched-acqf-optimization-experiment

./: .gitignore  BFGS_condition_number.py  GP_speedup_visualize.py  README.md  acqf_wrapper.py  after.py  after_batched_acqf.py  batched_acqf_eval_optim_mixed.py  batched_eval_multithreading.py  batched_optim_mixed.py  batched_sampler.py  before.py  benchmark.py  benchmark_multiobj.py  benchmark_tensor_operations.py  dryrun.py  for_presentation.py  greenlet_batched_eval.py  multiprocessing_optim_mixed.py  optim_mixed copy.py  optim_mixed.py  pandasvisualize.py  plot_iter.py  plot_sampling_speed.py  pyproject.toml  run_batched_acqf_eval.py  run_multiprocessing.py  run_original.py  run_plot_sampling_speed.py  run_stacking.py  sakaisan_proposalv2.py  simplified_optim_mixed.py  stacking_optim_mixed.py  summary_with_speedup.csv  t.py  tensor_runtime.py  test.py  test_fallback1.py  test_fallback2.py  tmp.py  (+2 more)
benchmark/: iterinfo_global_variables.py  main.py
src/: batched_sampler.py
tests/: test_batched_acqf_eval_vs_original.py  test_multiprocessing_vs_gpsampler.py  test_myoriginal_vs_original.py
